[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tilemap/Exterieur.tres" type="TileSet" id=2]
[ext_resource path="res://assets/scripts/Game.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=37]
radius = 62.0
height = 0.0

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 256.5, 17.75 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 82, 62.5 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 23.5, 35.5 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 62.5, 52.75 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 50, 22.25 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="mursol" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 15, 0, 1, 15, 0, 2, 15, 0, 3, 15, 0, 4, 15, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 65536, 15, 0, 65537, 15, 0, 65538, 15, 0, 65539, 15, 0, 65540, 15, 0, 131072, 15, 0, 131073, 15, 0, 131074, 15, 0, 131075, 15, 0, 131076, 15, 0, 131077, 12, 0, 131078, 12, 0, 131079, 12, 0, 131080, 12, 0, 131081, 12, 0, 131082, 12, 0, 131083, 12, 0, 131084, 12, 0, 131085, 12, 0, 131086, 12, 0, 131087, 12, 0, 196608, 15, 0, 196609, 15, 0, 196610, 15, 0, 196611, 15, 0, 196612, 15, 0, 196613, 12, 0, 196614, 12, 0, 196615, 12, 0, 196616, 12, 0, 196617, 12, 0, 196618, 12, 0, 196619, 12, 0, 196620, 12, 0, 196621, 12, 0, 196622, 12, 0, 196623, 12, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 12, 0, 262150, 12, 0, 262151, 12, 0, 262152, 12, 0, 262153, 12, 0, 262154, 12, 0, 262155, 12, 0, 262156, 12, 0, 262157, 12, 0, 262158, 12, 0, 262159, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 327689, 12, 0, 327690, 12, 0, 327691, 12, 0, 327692, 12, 0, 327693, 12, 0, 327694, 12, 0, 327695, 12, 0, 393216, 12, 0, 393217, 12, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, 393222, 12, 0, 393223, 12, 0, 393224, 12, 0, 393225, 12, 0, 393226, 12, 0, 393227, 12, 0, 393228, 12, 0, 393229, 12, 0, 393230, 12, 0, 393231, 12, 0, 458752, 12, 0, 458753, 12, 0, 458754, 12, 0, 458755, 12, 0, 458756, 12, 0, 458757, 12, 0, 458758, 12, 0, 458759, 12, 0, 458760, 12, 0, 458761, 12, 0, 458762, 12, 0, 458763, 12, 0, 458764, 12, 0, 458765, 12, 0, 458766, 12, 0, 458767, 12, 0, 524288, 12, 0, 524289, 12, 0, 524290, 12, 0, 524291, 12, 0, 524292, 12, 0, 524293, 12, 0, 524294, 12, 0, 524295, 12, 0, 524296, 12, 0, 524297, 12, 0, 524298, 12, 0, 524299, 12, 0, 524300, 12, 0, 524301, 12, 0, 524302, 12, 0, 524303, 12, 0, 589824, 12, 0, 589825, 12, 0, 589826, 12, 0, 589827, 12, 0, 589828, 12, 0, 589829, 12, 0, 589830, 12, 0, 589831, 12, 0, 589832, 12, 0, 589833, 12, 0, 589834, 12, 0, 589835, 12, 0, 589836, 12, 0, 589837, 12, 0, 589838, 12, 0, 589839, 12, 0 )

[node name="meuble" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 3, 13, 0, 5, 7, 0, 131079, 8, 0, 196609, 14, 0, 196612, 2, 0 )

[node name="Bureau" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bureau"]
position = Vector2( 498, 181 )
shape = SubResource( 37 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 326, 135 )
collision_mask = 3

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 256.5, 22.5 )
shape = SubResource( 36 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 258, 325.75 )
shape = SubResource( 36 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 80, 111.5 )
shape = SubResource( 38 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 485.5, 183.5 )
shape = SubResource( 39 )

[node name="Shop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shop"]
position = Vector2( 95.5, 241 )
shape = SubResource( 41 )

[node name="Leaderboard" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leaderboard"]
position = Vector2( 226, 66.75 )
shape = SubResource( 40 )

[connection signal="body_entered" from="Bureau" to="Player" method="_on_Bureau_body_entered"]
[connection signal="body_exited" from="Bureau" to="Player" method="_on_Bureau_body_exited"]
[connection signal="leaderboard_gui_open" from="Player" to="." method="_on_Player_leaderboard_gui_open"]
[connection signal="quest_gui_open" from="Player" to="." method="_on_Player_quest_gui_open"]
[connection signal="shop_gui_open" from="Player" to="." method="_on_Player_shop_gui_open"]
[connection signal="body_entered" from="Shop" to="Player" method="_on_Shop_body_entered"]
[connection signal="body_exited" from="Shop" to="Player" method="_on_Shop_body_exited"]
[connection signal="body_entered" from="Leaderboard" to="Player" method="_on_Leaderboard_body_entered"]
[connection signal="body_exited" from="Leaderboard" to="Player" method="_on_Leaderboard_body_exited"]
